--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
   <head>
 
+    <%= csrf_meta_tags %>
     <%= stylesheet_link_tag     "application" %>
     <%= javascript_include_tag  "application" %>
 
