--- a/app/views/layouts/webview.html.erb
+++ b/app/views/layouts/webview.html.erb
@@ -5,6 +5,7 @@
   <link rel='stylesheet' href='<%= Rails.application.secrets[:css_url]%>' />
   <script src="//cdn.mathjax.org/mathjax/2.5-latest/MathJax.js?config=MML_HTMLorMML"></script>
   <script type='text/javascript' src='<%= Rails.application.secrets[:js_url]%>' defer></script>
+  <%= csrf_meta_tags %>
 </head>
 <body>
   <%= yield %>
